kubernetes/ingress/k8-ingress-deploy-1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: k8-ingress-deploy-1
spec:
  replicas: 1
  selector:
    matchLabels:
      name: nginx-ingress
  template:
    metadata:
      labels:
        name: nginx-ingress
    spec:
      containers:
        - name: nginx-ingress-controller
          image: quay.io/kubernetes-ingress-controller/nginx-ingress-controller:0.21.0
          ports:
            - containerPort: 80
              name: http
            - containerPort: 443
              name: https
          args:
            - "/nginx-ingress-controller"
            - " --configmap=$(POD_NAMESPACE)/nginx-configuration"
