kubernetes/ingress/k8-ingress-service-1.yaml
apiVersion: v1
kind: Service
metadata:
  name: k8-ingress-service-1
spec:
  type: NodePort
  ports:
    - port: 80
      targetPort: 80
      name: http
      protocol: TCP
    - port: 443
      targetPort: 443
      name: https
      protocol: TCP
  selector:
    name: nginx-ingress
